--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ img#KU{
 #navigation-bar {
 	border: 1px #000 solid;
 	text-align: center;
-  background-color: #6f675c;
+  background-color: #244B78;
 }
 
 
